[Calcul] : calcul des heures réelles par jour
- TODO : charger les beans de configuration et finir le calcul

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,20 @@
 # LOGS
 logging.level.fr.deboissieu.calculassmat=DEBUG
-logging.level.org.springframework.web=INFO
+logging.level.org.springframework=INFO
 logging.file=logs/debug.log
+
+louise.heure.normale.lundi=1.08
+louise.heure.normale.mardi=1.08
+louise.heure.normale.mercredi=0
+louise.heure.normale.jeudi=1.08
+louise.heure.normale.vendredi=0
+louise.heure.normale.samedi=0
+louise.heure.normale.dimanche=0
+
+josephine.heure.normale.lundi=9.25
+josephine.heure.normale.mardi=9.25
+josephine.heure.normale.mercredi=0
+josephine.heure.normale.jeudi=9.25
+josephine.heure.normale.vendredi=8
+josephine.heure.normale.samedi=0
+josephine.heure.normale.dimanche=0
