[Synthese] : suite calcul heures + réorganisation
- suite du calcul (à finir)
- reorganisation du code
- paramétrage
- calcul dates + test

--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,11 @@
 		    <artifactId>commons-collections4</artifactId>
 		    <version>${apache.commons.collection.version}</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
