[SYNTHESE] : avancement du calcul

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ logging.level.fr.deboissieu.calculassmat=DEBUG
 logging.level.org.springframework=INFO
 logging.file=logs/debug.log
 
+server.error.whitelabel.enabled=false
