[PARAMETRAGE] : config MongoDB + dump
- mise en place du chargement des paramètres depuis la base mongo
- dump de la base de dev

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ logging.level.org.springframework=INFO
 logging.file=logs/debug.log
 
 server.error.whitelabel.enabled=false
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=assmat
+spring.data.mongodb.password=assmat
+spring.data.mongodb.database=assmat
