[SECURITY] : + spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ logging.level.fr.deboissieu.calculassmat=DEBUG
 logging.level.org.springframework=INFO
 logging.file=logs/debug.log
 
-server.error.whitelabel.enabled=false
+server.error.whitelabel.enabled=true
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
