--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ logging.level.fr.deboissieu.calculassmat=DEBUG
 logging.level.org.springframework=INFO
 logging.file=logs/debug.log
 
+server.port=7777
 server.error.whitelabel.enabled=true
 
 spring.data.mongodb.host=localhost
