[SECURITY] : maj security + bcrypt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.username=assmat
 spring.data.mongodb.password=assmat
 spring.data.mongodb.database=assmat
+
+basic.auth.user=assmat
+basic.auth.encoded.password=$2a$10$9GdsaeK2B02pdft3.OOLx.UG/qsz4h06YQAWYI71v6cTOyTN3GqvO
