--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # LOGS
 logging.level.fr.deboissieu.calculassmat=DEBUG
-logging.level.org.springframework=INFO
+logging.level.org.springframework=DEBUG
 logging.file=logs/debug.log
 
 server.port=7777
