[JWT] : mise en place Security JWT
- suppression BasicAuth
- implémentation de la sécurisation via JWT
- dump base

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,13 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<!-- JSON WEB TOKEN -->
+		<dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.6.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
