--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
 		</dependency>
-		
+
 		<!-- TESTS -->
 		<dependency>
 			<groupId>org.hamcrest</groupId>
@@ -134,6 +134,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.22.0</version><!--$NO-MVN-MAN-VER$-->
+			<scope>test</scope>
 		</dependency>
 
 		<!-- JSON WEB TOKEN -->
